--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,12 @@
     "dayjs": "^1.11.7",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
+    "tabler-icons-react": "^1.56.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/react-blockies": "^1.4.1"
   }
 }
