--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
+    "ethers": "^6.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
