--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,15 @@
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
     "ethers": "^5.7.2",
+    "moralis-v1": "^1.12.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-blockies": "^1.4.1",
     "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
     "tabler-icons-react": "^1.56.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "wagmi": "^0.11.5"
   },
   "devDependencies": {
     "@types/react-blockies": "^1.4.1"
