--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "18.0.10",
     "dayjs": "^1.11.7",
     "ethers": "^5.7.2",
+    "joi": "^17.8.1",
     "moralis-v1": "^1.12.0",
     "next": "13.1.6",
     "react": "18.2.0",
