--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.6",
-    "hardhat-deploy": "^0.11.23"
+    "hardhat-deploy": "^0.11.23",
+    "hardhat-gas-reporter": "^1.0.9"
   }
 }
